[ADD] Web server using Gin framework

--- a/ServiceHub/templates/home.html
+++ b/ServiceHub/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="../assets/home.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <div class="services">
 
             <div class="serv-elem">
-                <img src="img/container.jpg" alt="conatiners">
+                <img src="../assets/img/container.jpg" alt="conatiners">
                 <div class="serv-elem-text">
                     <div class="service-title">
                         <p>Container</p>
@@ -31,7 +31,7 @@
 
             </div>
             <div class="serv-elem">
-                <img src="img/rss-icon.svg" alt="rss">
+                <img src="../assets/img/rss-icon.svg" alt="rss">
                 <div class="serv-elem-text">
                     <div class="service-title">
                         <p>RSS</p>
@@ -69,7 +69,7 @@
 
             <div class="container-card">
                 <div class="left-image">
-                    <img src="img/container.svg" width="70%" loading="lazy">
+                    <img src="../assets/img/container.svg" width="70%" loading="lazy">
                 </div>
                 <div class=" container-card-body ">
                     <div class="container-name ">
@@ -106,7 +106,7 @@
             </div>
             <div class="container-card ">
                 <div class="left-image ">
-                    <img src="img/container.svg " width="70% ">
+                    <img src="../assets/img/container.svg " width="70% ">
                 </div>
                 <div class="container-card-body ">
                     <div class="container-name ">
@@ -136,7 +136,7 @@
             </div>
             <div class="container-card ">
                 <div class="left-image ">
-                    <img src="img/container.svg " width="70% ">
+                    <img src="../assets/img/container.svg " width="70% ">
                 </div>
                 <div class="container-card-body ">
                     <div class="container-name ">
@@ -166,7 +166,7 @@
             </div>
             <div class="container-card ">
                 <div class="left-image ">
-                    <img src="img/container.svg " width="70% ">
+                    <img src="../assets/img/container.svg " width="70% ">
                 </div>
                 <div class="container-card-body ">
                     <div class="container-name ">
@@ -196,7 +196,7 @@
             </div>
             <div class="container-card ">
                 <div class="left-image ">
-                    <img src="img/container.svg " width="70% ">
+                    <img src="../assets/img/container.svg " width="70% ">
                 </div>
                 <div class="container-card-body ">
                     <div class="container-name ">
