--- a/ServiceHub/templates/login.html
+++ b/ServiceHub/templates/login.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <title>{{ .title }}</title>
+    <link rel="stylesheet" href="../assets/style.css">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
 
 </head>
 
 <body>
-    <img class="wave" src="img/wave.png">
+    <img class="wave" src="../assets/img/wave.png">
     <div class="container">
         <div class="img">
-            <img src="img/bg.svg">
+            <img src="../assets/img/bg.svg">
         </div>
         <div class="login-content">
             <form action="#">
-                <img class="avatar" src="img/avatar.svg">
+                <img class="avatar" src="../assets/img/avatar.svg">
                 <h2 class="title">Welcome</h2>
                 <div class="input-div one focus">
                     <div class="i">
@@ -59,7 +59,7 @@
         </form>
     </div>
 
-    <script src="app.js"></script>
+    <script src="../assets/app.js"></script>
 </body>
 
 </html>
